# drumbot_roy

./: .gitignore  README.md  pyproject.toml
src/drumbot_roy/training/: drum_sample_dataset.py  sample_extractor.py
