[tool.poetry]
name = "drumbot_roy"
version = "0.1.0"
description = ""
authors = ["Jan Luhmann <jan.luhmann@exb.de>"]

[tool.poetry.dependencies]
python = "3.8.*"
miditoolkit = "^0.1.15"
miditok = "^1.1.8"
scipy = "^1.8.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
